# flare_n

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
flare/belief/: certainty_decay.py  memory_map.py
flare/core/: wind.py
flare/core/hazards/: fire_deterministic.py  fire_stochastic.py  nfz.py  smoke.py
flare/envs/: flare_pomdp.py
flare/scenarios/: synthetic.py
flare/sensors/: camera.py  gps.py  lidar.py  ray_cast.py
tests/: test_camera.py  test_certainty_decay.py  test_env.py  test_fire_deterministic.py  test_fire_stochastic.py  test_gps.py  test_lidar.py  test_memory_map.py  test_nfz.py  test_ray_cast.py  test_smoke.py  test_synthetic_scenario.py  test_wind.py
